--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod
                     sed arcu cras consecuat lorem ipsum dolor sit amet.
                 </p>
-                <button>GET STARTED</button>
+                <button id="getStarted">GET STARTED</button>
             </div>
             <div id="section2">
                 <div>
