--- a/index.html
+++ b/index.html
@@ -22,68 +22,87 @@
                 <button id="getStarted">GET STARTED</button>
             </div>
             <div id="section2">
-                <div>
-                    section1
+                <div class="section2InnerContainer" style="text-align: right;">
+                    <div>
+                        <h2>Magna ultricies</h2>
+                        <p>
+                            Morbi in sem quis dui plalorem ipsum euismod in, pharetra sed ultricies.
+                        </p>
+                    </div>
+                    <div>
+                        <h2>Ipsum adipiscing lorem</h2>
+                        <p>
+                            Tristique yonve cursus jam nulla quam loreipsu gravida adipiscing lorem
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <img src="https://templated.co/items/demos/intensify/images/pic01.jpg" alt="person with phone"/>
-                </div>
-                <div>
-                    section3
+                <img class="imgContainer" src="https://templated.co/items/demos/intensify/images/pic01.jpg" alt="person with phone"/>
+                <div class="section2InnerContainer">
+                    <div>
+                        <h2>Magna ultricies</h2>
+                        <p>
+                            Morbi in sem quis dui plalorem ipsum euismod in, pharetra sed ultricies.
+                        </p>
+                    </div>
+                    <div>
+                        <h2>Ipsum adipiscing lorem</h2>
+                        <p>
+                            Tristique yonve cursus jam nulla quam loreipsu gravida adipiscing lorem
+                        </p>
+                    </div>
                 </div>
             </div>
             <div id="section3">
                 <h2>Ipsum sed lorem</h2>
-                <p>
-                    Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod
-                    sed arcu cras consecuat lorem ipsum dolor sit amet.
-                </p>
-                <h5>author</h5>
-                <h6>role</h6>
+                <blockquote>
+                    &ldquo;Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod
+                    sed arcu cras consecuat lorem ipsum dolor sit amet.&rdquo;
+                </blockquote>
+                <div class="authorInfo">
+                    <h5>Jane Anderson</h5>
+                    <h6 id="role">CEO, Untitled</h6>
+                </div>
             </div>
             <div id="section4">
                 <div class="customCard">
                     <img src="https://templated.co/items/demos/intensify/images/pic02.jpg" alt="travel image"/>
-                    <div>
-                        <h3>Consequat</h3>
+                    <div class="cardContent">
+                        <h3 class="cardTitle">Consequat</h3>
                         <p>Placerat ornare. Pellentesque od sed euismod in, pharetra ltricies edarcu cas consequat.</p>
                     </div>
                 </div>
                 <div class="customCard">
-                    <img src="https://templated.co/items/demos/intensify/images/pic02.jpg" alt="travel image"/>
-                    <div>
-                        <h3>Consequat</h3>
-                        <p>Placerat ornare. Pellentesque od sed euismod in, pharetra ltricies edarcu cas consequat.</p>
+                    <img src="https://templated.co/items/demos/intensify/images/pic03.jpg" alt="travel image"/>
+                    <div class="cardContent">
+                        <h3 class="cardTitle">Adipiscing</h3>
+                        <p>Morbi in sem quis dui placerat Pellentesque odio nisi, euismod pharetra lorem ipsum.</p>
                     </div>
                 </div>
                 <div class="customCard">
-                    <img src="https://templated.co/items/demos/intensify/images/pic02.jpg" alt="travel image"/>
-                    <div>
-                        <h3>Consequat</h3>
-                        <p>Placerat ornare. Pellentesque od sed euismod in, pharetra ltricies edarcu cas consequat.</p>
+                    <img src="https://templated.co/items/demos/intensify/images/pic04.jpg" alt="travel image"/>
+                    <div class="cardContent">
+                        <h3 class="cardTitle">Malesuada</h3>
+                        <p>Nam dui mi, tincidunt quis, accu an porttitor, facilisis luctus que metus vulputate sem magna.</p>
                     </div>
                 </div>
             </div>
         </main>
     </div>
     <footer>
-        <h2>title</h2>
+        <h3 style="padding-top: 2rem;">Get in touch</h3>
         <div class="icons-container">
             <div class="footerOption">
-                <div>icon</div>
-                text
+                (000) 000-0000
             </div>
             <div class="footerOption">
-                <div>icon</div>
-                text
+                information@untitled.tld
             </div>
             <div class="footerOption">
-                <div>icon</div>
-                text
+                123 Somewhere Road, Nashville, TN 00000
             </div>
         </div>
         <hr />
-        <p>paragraph</p>
+        <p>© Copyright - All Rights Reserved</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
